[package]
name = "engine_code"
version = "0.1.0"
authors = ["Romain Dolbeau <romain@dolbeau.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.engine25519-as]
#git="https://github.com/betrusted-io/engine25519-as.git"
#rev="6681e73c1fdc4a460b5ef9f9c7c91aef546d00f3"
path = "/home/dolbeau/engine25519-as"

[dev-dependencies.engine25519-as]
#git="https://github.com/betrusted-io/engine25519-as.git"
#rev="6681e73c1fdc4a460b5ef9f9c7c91aef546d00f3"
path = "/home/dolbeau/engine25519-as"

[[bin]]
name = "engine_code"
path = "engine_code.rs"
